@@ -22,9 +22,13 @@ struct output
  };
 
 extern struct output *output_context;
+extern unsigned int stdio_traced;
 
 #define OUTPUT_SET(_new)    do{ if ((_new)->syncout) output_context = (_new); }while(0)
 #define OUTPUT_UNSET()      do{ output_context = NULL; }while(0)
+
+#define OUTPUT_TRACED()     do{ stdio_traced = 1; }while(0)
+#define OUTPUT_IS_TRACED()  (!!stdio_traced)
 
 FILE *output_tmpfile (char **, const char *);
 
